# house-of-billions-bots

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  billions_deepfake_bot.py  billions_mbti_bot.py  deploy_mbti_bot.py  entrypoint.sh  fly.toml  pyproject.toml  quiz_data.json
src/: common.py  deepfake_bot.py  mbti_bot.py
src/data/: allowed_handles.txt  quiz_data.json
