[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "house-of-billions-bots"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["data/*.json", "data/*.txt", "data/mbti_images/*.png"]
